  - Fix variable typo in folders_create.php (#1545316).
  - Added Courier IMAP OUTBOX check to configtest utility.
  - If mailbox name starts with slash or contains ../, error message is 
    generated. Safety check for insecure default UW IMAP setup (#1557078).
  - Ignore message copy errors when messages are deleted. Allows to delete
    messages when quota is exceeded (#614887) (#646386) (#1446026).
  - Fixed unintended literal fetching (#1562271).
  - Added global file based address book listing controls. Added line 
    length configuration option for local_file address book backend 
    (#1181561). Added address book data integrity checks in local_file 
    address book backend. Fixed eregi and object notices in local_file 
    and database address book backends. Added additional address book 
    field support.
  - Fixed variable corruption in configtest utility.
  - Checked if configuration file is readable in configuration utility
    (#1568355).
  - Special mailboxes marked in special_mailbox hook are no longer listed
    in folder delete, rename and subscription options.
  - Translate plugin: prevent PHP notice when viewing empty message.
  - Add CEST and MEST (non-standard) timezone codes for +0200.
  - Add <label> to From field in message list.
  - Add support for parsing SpamAssassin's X-Spam-Status header (#1589520).
  - Fix in bodystructure parser code related to strings ending with an
    escape character.
  - Added "attachment */*" hook
  - Added third parameter $logout_link to logout_error hook that allows
    plugin control over login page URI displayed on login error page

Version 1.4.8 - 11th August 2006
--------------------------------
  - Fixed URL for Read Receipts being incorrect in some cases (#1177518).
  - Fixed endless loop when trying to parse "From: )(" (#1517867).
  - Using is_file() instead of file_exists() in fortune plugin, which
    correctly fails if the specified location is a directory (#1499134).